# KERMA

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
examples/: CMakeLists.txt  simple_example.cpp
src/: extract_and_export.py  main.cpp
tests/: test_extract_and_export.py
